[GTK4] Navigation swipe doesn't work when the page scrolls horizontally https://bugs.webkit.org/show_bug.cgi?id=226173

Patch by Alexander Mikhaylenko <alexm@gnome.org> on 2021-07-06
Reviewed by Michael Catanzaro.

There was a chunk of code that was never ported to GTK4. Port it.

* UIProcess/API/gtk/PageClientImpl.cpp:
(WebKit::PageClientImpl::wheelEventWasNotHandledByWebCore):

Canonical link: https://commits.webkit.org/239411@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279580 268f45cc-cd09-0410-ab3c-d52691b4dbfc